--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div id="main-container">
         <div id="result-display">
-    
+            <input type="text" readonly="readonly">
         </div>
         <div>
             <div id="left-container">
